--- a/css/home.css
+++ b/css/home.css
@@ -8,40 +8,35 @@
   content: "";
 }
 
-section {
+.vl {
+  border-left: 2px solid black;
+  padding-right: 4px;
+  height: 80px;
+  display: inline;
   position: relative;
-  left: 100px;
+  top: 0;
 }
 
-h1 {
-  margin: 80px 0 10px 0;
-  font-size: 52px;
-  font-family: "Montserrat", sans-serif;
-  text-transform: uppercase;
-  text-shadow: 1px 1px 0px #dc143c, 2px 2px 0px #dc143c, 3px 3px 0px #dc143c,
-    4px 4px 0px #dc143c;
+.header-text {
+  font-family: "Playpen Sans", cursive;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
 }
 
-h2 {
-  font-size: 24px;
-}
-
-body {
+nav {
+  float: left;
+  position: fixed;
+  top: 17.5%;
+  left: -32.5px;
+  background: transparent;
   padding: 100px 0;
-  background: lightblue;
+
   color: white;
   max-width: 640px;
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
   line-height: 1.4;
-}
-
-nav {
-  float: left;
-  position: relative;
-  top: 0;
-  left: 0;
-  background: transparent;
 }
 
 nav ul {
@@ -52,7 +47,7 @@ nav ul li {
   position: relative;
   width: 70px;
   cursor: pointer;
-  background: crimson;
+  background: #ff914d;
   text-transform: uppercase;
   transition: all 0.4s ease-out;
 }
@@ -60,7 +55,7 @@ nav ul li {
 nav ul li:after {
   position: absolute;
   background: white;
-  color: crimson;
+  color: #ff914d;
   top: 0;
   left: 70px;
   width: 70px;
@@ -77,15 +72,15 @@ nav ul li:nth-child(1):after {
 }
 nav ul li:nth-child(2):after {
   content: "About";
-  line-height: 88px;
+  line-height: 110px;
 }
 nav ul li:nth-child(3):after {
-  content: "Work";
-  line-height: 85px;
+  content: "Toys";
+  line-height: 125px;
 }
 nav ul li:nth-child(4):after {
-  content: "Say hi";
-  line-height: 70px;
+  content: "Contact";
+  line-height: 60px;
 }
 
 nav ul li:hover {
@@ -125,7 +120,7 @@ nav ul li div {
   height: 0;
   border-style: solid;
   border-width: 0 17px 12px 17px;
-  border-color: transparent transparent crimson transparent;
+  border-color: transparent transparent #ff914d transparent;
 }
 /*white triangle over red triangle*/
 .roof-edge:after {
@@ -150,138 +145,17 @@ nav ul li div {
 /*door*/
 .front:after {
   position: absolute;
-  background: crimson;
+  background: #ff914d;
   width: 11px;
   height: 13px;
   bottom: 0;
   left: 9px;
 }
 
-/*/// About me ////*/
-
-.head {
-  width: 32px;
-  height: 35px;
-  background: white;
-  border-radius: 8px;
+.imgfix {
+  width: 100%;
+  height: 100%;
 }
-/*mouth*/
-.head:after {
-  width: 4px;
-  height: 10px;
-  background: white;
-  position: absolute;
-  border-radius: 4px 0 0 4px;
-  top: 21px;
-  left: 14px;
-  transform: rotate(270deg);
-}
-
-.eyes {
-  width: 8px;
-  height: 5px;
-  border-radius: 50%;
-  position: absolute;
-  top: 10px;
-  left: 5px;
-  background: crimson;
-}
-/*right eye*/
-.eyes:after {
-  width: 8px;
-  height: 5px;
-  border-radius: 50%;
-  position: absolute;
-  top: 0;
-  left: 14px;
-  background: crimson;
-}
-
-.beard {
-  width: 32px;
-  height: 17px;
-  background: crimson;
-  border: 2px solid white;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  border-radius: 0 0 8px 8px;
-}
-/*nose*/
-.beard:after {
-  position: absolute;
-  top: -2px;
-  left: 11px;
-  background: white;
-  width: 6px;
-  height: 4px;
-  border-left: 1px solid crimson;
-  border-right: 1px solid crimson;
-}
-
-/*//work//*/
-
-.paper {
-  position: relative;
-  height: 32px;
-  width: 29px;
-  background: white;
-  border: 2px solid white;
-}
-
-/*window*/
-.paper:after {
-  position: absolute;
-  top: 1px;
-  left: 0;
-  width: 25px;
-  height: 29px;
-  background: white;
-  border-top: 4px solid crimson;
-}
-
-.lines {
-  position: absolute;
-  top: 36px;
-  left: 5px;
-  width: 11px;
-  box-shadow: 0 0 0 1px crimson;
-}
-
-.lines:after {
-  position: absolute;
-  top: 4px;
-  left: 3px;
-  width: 14px;
-  box-shadow: 0 0 0 1px crimson;
-}
-
-.lines:nth-child(2) {
-  position: absolute;
-  top: 44px;
-  left: 8px;
-  width: 11px;
-}
-
-.lines:nth-child(2):after {
-  position: absolute;
-  top: 4px;
-  left: -3px;
-  width: 11px;
-}
-
-.lines:nth-child(3) {
-  position: absolute;
-  top: 52px;
-  left: 8px;
-  width: 14px;
-}
-
-.lines:nth-child(3):after {
-  display: none;
-}
-
-/*//mail //*/
 
 .mail-base {
   position: relative;
@@ -300,7 +174,7 @@ nav ul li div {
   transform: rotate(180deg);
   border-style: solid;
   border-width: 0 16px 11px 16px;
-  border-color: transparent transparent crimson transparent;
+  border-color: transparent transparent #ff914d transparent;
 }
 
 .mail-top:after {
@@ -313,4 +187,26 @@ nav ul li div {
   border-style: solid;
   border-width: 0 16px 9px 16px;
   border-color: transparent transparent white transparent;
+}
+
+.hero {
+  height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 1)),
+    url(http://localhost:5500/imgs/hero.png) center/cover no-repeat;
+  position: relative;
+}
+
+h1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 3;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 150px;
+  text-align: center;
+  white-space: nowrap;
+  font-family: "Satisfy", cursive;
+  font-weight: 400;
+  font-style: normal;
 }
