--- a/css/home.css
+++ b/css/home.css
@@ -245,7 +245,7 @@ html {
   background: #fff8e7;
   transform: translateY(50px);
   text-align: center;
-  margin-top: 80px;
+  margin-top: 0.5%;
 }
 
 .about h2 {
